--- a/elera.html
+++ b/elera.html
@@ -32,32 +32,24 @@
           <a href="introducao.html"><span class="fa fa-user mr-3"></span> Introdução</a>
         </li>
         <li>
-          <a href="#"><span class="fa fa-sticky-note mr-3"></span> Friends</a>
+          <a href="repositorios.html"><span class="fa fa-sticky-note mr-3"></span> Friends</a>
         </li>
         <li>
-          <a href="#"><span class="fa fa-sticky-note mr-3"></span> Subcription</a>
+          <a href="elera.html"><span class="fa fa-sticky-note mr-3"></span> Subcription</a>
         </li>
         <li>
-          <a href="#"><span class="fa fa-paper-plane mr-3"></span> Settings</a>
+          <a href="Connexions.html"><span class="fa fa-paper-plane mr-3"></span> Settings</a>
         </li>
+        <li>
+          <a href="Connexions.html"><span class="fa fa-paper-plane mr-3"></span> Settings</a>
+        </li>
+
         <li>
           <a href="#"><span class="fa fa-paper-plane mr-3"></span> Information</a>
         </li>
       </ul>
 
-      <ul class="collapse list-unstyled" id="pageSubmenu">
-        <li>
-          <a href="#">Page 1</a>
-        </li>
-        <li>
-          <a href="#">Page 2</a>
-        </li>
-        <li>
-          <a href="#">Page 3</a>
-        </li>
-      </ul>
-
-    </nav>
+     </nav>
 
     <!-- Page Content  -->
     <div id="content" class="p-4 p-md-5 pt-5">
