--- a/repositorios.html
+++ b/repositorios.html
@@ -32,13 +32,13 @@
           <a href="introducao.html"><span class="fa fa-user mr-3"></span> Introdução</a>
         </li>
         <li>
-          <a href="repositorios.html"><span class="fa fa-sticky-note mr-3"></span> Friends</a>
+          <a href="repositorios.html"><span class="fa fa-sticky-note mr-3"></span> Repositórios</a>
         </li>
         <li>
-          <a href="elera.html"><span class="fa fa-sticky-note mr-3"></span> Subcription</a>
+          <a href="elera.html"><span class="fa fa-sticky-note mr-3"></span> eLera</a>
         </li>
         <li>
-          <a href="Connexions.html"><span class="fa fa-paper-plane mr-3"></span> Settings</a>
+          <a href="Connexions.html"><span class="fa fa-paper-plane mr-3"></span> Connexions</a>
         </li>
         <li>
           <a href="Connexions.html"><span class="fa fa-paper-plane mr-3"></span> Settings</a>
