--- a/Connexions.html
+++ b/Connexions.html
@@ -32,24 +32,20 @@
           <a href="introducao.html"><span class="fa fa-user mr-3"></span> Introdução</a>
         </li>
         <li>
-          <a href="repositorios.html"><span class="fa fa-sticky-note mr-3"></span> Friends</a>
+          <a href="repositorios.html"><span class="fa fa-sticky-note mr-3"></span> Repositorios</a>
         </li>
         <li>
-          <a href="elera.html"><span class="fa fa-sticky-note mr-3"></span> Subcription</a>
+          <a href="elera.html"><span class="fa fa-sticky-note mr-3"></span> eLera</a>
         </li>
         <li>
-          <a href="Connexions.html"><span class="fa fa-paper-plane mr-3"></span> Settings</a>
+          <a href="Connexions.html"><span class="fa fa-paper-plane mr-3"></span> Connexions</a>
         </li>
-        <li>
-          <a href="Connexions.html"><span class="fa fa-paper-plane mr-3"></span> Settings</a>
-        </li>
-
         <li>
           <a href="#"><span class="fa fa-paper-plane mr-3"></span> Information</a>
         </li>
       </ul>
 
-     </nav>
+    </nav>
 
     <!-- Page Content  -->
     <div id="content" class="p-4 p-md-5 pt-5">
@@ -58,7 +54,7 @@
         colaborativamente materiais de aprendizagem e que tem apresentado um crescimento exponencial de contribuidores
         nos últimos anos.</p>
 
-        <p class="texto-slide">
+      <p class="texto-slide">
         No Connexions todos os materiais são criados por sua própria
         comunidade onde desenvolve materiais em dois formatos: <b>módulos (pequenas peças de
           conhecimento) e coleções (grupos de módulos estruturados em notas de cursos).</b>
@@ -74,7 +70,7 @@
         para ordenar os materiais considerando os números de acesso aolongo do tempo (medida de popularidade)
         e as pontuações dadas pelos usuários.
       </p>
-      
+
       <p class="texto-slide">Recentemente também integrou plugins do (Facebook e Twitter), permitindo que a comunidade
         de usuários possa
         recomendar e disseminar materiais através dessas plataformas. </p>
