--- a/repositorios.html
+++ b/repositorios.html
@@ -32,7 +32,7 @@
           <a href="introducao.html"><span class="fa fa-user mr-3"></span> Introdução</a>
         </li>
         <li>
-          <a href="repositorios.html"><span class="fa fa-sticky-note mr-3"></span> Repositórios</a>
+          <a href="repositorios.html"><span class="fa fa-sticky-note mr-3"></span> Repositorios</a>
         </li>
         <li>
           <a href="elera.html"><span class="fa fa-sticky-note mr-3"></span> eLera</a>
@@ -41,15 +41,11 @@
           <a href="Connexions.html"><span class="fa fa-paper-plane mr-3"></span> Connexions</a>
         </li>
         <li>
-          <a href="Connexions.html"><span class="fa fa-paper-plane mr-3"></span> Settings</a>
-        </li>
-
-        <li>
           <a href="#"><span class="fa fa-paper-plane mr-3"></span> Information</a>
         </li>
       </ul>
 
-     </nav>
+    </nav>
 
     <!-- Page Content  -->
     <div id="content" class="p-4 p-md-5 pt-5">
