--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="css/mycss.css">
   </head>
   <body>
-		
+
     <div class="wrapper d-flex align-items-stretch">
       <nav id="sidebar">
         <div class="custom-menu">
@@ -30,33 +30,21 @@
             <a href="introducao.html"><span class="fa fa-user mr-3"></span> Introdução</a>
           </li>
           <li>
-            <a href="#"><span class="fa fa-sticky-note mr-3"></span> Friends</a>
+            <a href="repositorios.html"><span class="fa fa-sticky-note mr-3"></span> Repositorios</a>
           </li>
           <li>
-            <a href="#"><span class="fa fa-sticky-note mr-3"></span> Subcription</a>
+            <a href="elera.html"><span class="fa fa-sticky-note mr-3"></span> eLera</a>
           </li>
           <li>
-            <a href="#"><span class="fa fa-paper-plane mr-3"></span> Settings</a>
+            <a href="Connexions.html"><span class="fa fa-paper-plane mr-3"></span> Connexions</a>
           </li>
           <li>
             <a href="#"><span class="fa fa-paper-plane mr-3"></span> Information</a>
           </li>
         </ul>
   
-        <ul class="collapse list-unstyled" id="pageSubmenu">
-          <li>
-            <a href="#">Page 1</a>
-          </li>
-          <li>
-            <a href="#">Page 2</a>
-          </li>
-          <li>
-            <a href="#">Page 3</a>
-          </li>
-        </ul>
-        
-    	</nav>
-
+      </nav>
+  
         <!-- Page Content  -->
       <div id="content" class="p-4 p-md-5 pt-5">
         
