--- a/graphite.html
+++ b/graphite.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>Objetos de Aprendizado</title>
+  <title>5.2 Avaliação dentro de Repositórios</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -58,22 +58,31 @@
 
     <!-- Page Content  -->
     <div id="content" class="p-4 p-md-5 pt-5">
-      <h1 class="mb-4">Introdução</h1>
-      <p class="texto-slide">O presente capítulo descreve alguns dos principais aspectos relacionados à avaliação da
-        qualidade de objetos de aprendizagem e como
-        os atuais repositórios realizam essa avaliação, além de apresentar alguns
-        exemplos de avaliação em repositórios tradicionais.</p>
+      <h1 class="mb-4">Graphite</h1>
+      <p class="texto-slide"> <a href="https://www.commonsense.org/education">Graphite</a> é um repositório relativamente novo que armazena informações sobre recursos de aprendizagem e é mantido pela Common Sense Media.         
+        No Graphite é possível encontrar websites, jogos e apps que são oficialmente pontuadas por um comitê de editores e revisores. 
+        Como o portal é construído por professores e para professores, tal comunidade também é autorizada a pontuar e comentar sobre os recursos, 
+        incluindo impressões de uso em sala de aula. As notas médias dos professores são mostradas juntamente com as pontuações oficiais. 
+        As avaliações variam entre 1 e 5 e indicam o potencial de aprendizagem dos recursos (não serve para aprendizagem, suficiente, bom, muito bom, excelente) 
+        seguindo três dimensões de aprendizagem, sendo elas:
+        </p>
 
-      <p class="texto-slide">Avaliar a qualidade de objetos de aprendizagem (OAs) é uma tarefa
-        difícil e complexa, que normalmente gira em torno de múltiplos e diferentes aspectos que precisam ser
-        observados. Na verdade, a própria definição de qualidade não é direta. Vargo et al. (2003) declaram que, ainda
-        que
-        a avaliação da qualidade de OAs possa ser considerada um campo que
-        ainda precisa ser explorado. A qualidade é contextual
-        e irá depender do “alinhamento entre o grupo de usuários sendo servidos
-        pelo objeto, a ambientação em que o objeto foi implementado, e o propósito
-        designado para o objeto”.</p>
+        <p class="texto-slide"><b>
+        1. Engajamento: o quanto os recursos seguram o interesse dos estudantes; </br>
+        2. Pedagogia: se o produto possui conteúdo central para a experiência de aprendizagem; </br>
+        3. Apoio: se o recurso fornece retorno apropriado, e se existe apoio para professores e estudantes.</br>
+      </b>
+      </p>
+      <p class="texto-slide">
+        Cada revisão de recurso ainda contém comentários sobre os pros e contras desse recurso, e como o recurso 
+        funciona.
+        <img src="images/graphite-avaliacao.png" class="img-fluid" alt="Imagem responsiva">
 
+      </p>
+      
+
+
+      <img src="images/graphite.png" class="img-fluid" alt="Imagem responsiva">
     </div>
   </div>
 
