--- a/merlot.html
+++ b/merlot.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>Objetos de Aprendizado</title>
+  <title>5.2 Avaliação dentro de Repositórios</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -58,22 +58,48 @@
 
     <!-- Page Content  -->
     <div id="content" class="p-4 p-md-5 pt-5">
-      <h1 class="mb-4">Introdução</h1>
-      <p class="texto-slide">O presente capítulo descreve alguns dos principais aspectos relacionados à avaliação da
-        qualidade de objetos de aprendizagem e como
-        os atuais repositórios realizam essa avaliação, além de apresentar alguns
-        exemplos de avaliação em repositórios tradicionais.</p>
+      <h1 class="mb-4">Merlot</h1>
+      <p class="texto-slide">O <a href="https://merlot.org/merlot/">MERLOT</a> (The Multimedia Educational Resource for
+        Learning and Online Teaching) é uma iniciativa bem conhecida e internacionalmente
+        reconhecida que permite a usuários catalogar recursos educacionais com
+        o objetivo de facilitar o seu uso e compartilhamento.
+      </p>
+      <p class="texto-slide">Foi desenvolvido pelo Centro de Aprendizagem Distribuída da Universidade do Estado da
+        California e armazena metadados de mais de 45.000
+        materiais distribuídos em diversas áreas (Artes, Negócios, Humanidades, entre outras). Sua comunidade de
+        usuários é formada por mais de
+        100.000 membros. Como o MERLOT não armazena os OAs localmente,
+        ele pode ser classificado como um referatório.</p>
+      </p>
+      <p class="texto-slide">
+        AO repositório MERLOT apresenta um modelo de revisão por pares
+        de pós-publicação com o objetivo de assegurar a qualidade dos recursos
+        catalogados (CAFOLLA, 2006).
+      </p>
 
-      <p class="texto-slide">Avaliar a qualidade de objetos de aprendizagem (OAs) é uma tarefa
-        difícil e complexa, que normalmente gira em torno de múltiplos e diferentes aspectos que precisam ser
-        observados. Na verdade, a própria definição de qualidade não é direta. Vargo et al. (2003) declaram que, ainda
-        que
-        a avaliação da qualidade de OAs possa ser considerada um campo que
-        ainda precisa ser explorado. A qualidade é contextual
-        e irá depender do “alinhamento entre o grupo de usuários sendo servidos
-        pelo objeto, a ambientação em que o objeto foi implementado, e o propósito
-        designado para o objeto”.</p>
+      <p class="texto-slide">
+        Os materiais catalogados no MERLOT são
+        revisados por diferentes especialistas nas disciplinas em questão e de
+        acordo com critérios de avaliação formais e pré-definidos que contemplam três diferentes aspectos:
+      </p>
 
+      <p class="texto-slide"><b>
+          1. Qualidade do Conteúdo;</br>
+          2. Efetivo Potencial como uma Ferramenta de Ensino;</br>
+          3. Facilidade de Uso. </br>
+        </b>
+      </p>
+
+      <p class="texto-slide">
+        Após os revisores especialistas relatarem suas avaliações, o editor chefe compõe um único relatório com nota
+        que é publicado no repositório com a autorização dos autores.
+        Além da revisão por especialistas no domínio. Os usuarios também deixam comentários e pontuações para os
+        materiais, complementando sua estratégia de avaliação com a alternativa de um mecanismo mais informal.
+        As avaliações de ambos os grupos (usuários e especialistas) variam de 1 a 5, sendo 5 a melhor nota.
+      </p>
+
+
+      <img src="images/Merlot.png" class="img-fluid" alt="Imagem responsiva">
     </div>
   </div>
 
