--- a/organic.html
+++ b/organic.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>Objetos de Aprendizado</title>
+  <title>5.2 Avaliação dentro de Repositórios</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -58,22 +58,24 @@
 
     <!-- Page Content  -->
     <div id="content" class="p-4 p-md-5 pt-5">
-      <h1 class="mb-4">Introdução</h1>
-      <p class="texto-slide">O presente capítulo descreve alguns dos principais aspectos relacionados à avaliação da
-        qualidade de objetos de aprendizagem e como
-        os atuais repositórios realizam essa avaliação, além de apresentar alguns
-        exemplos de avaliação em repositórios tradicionais.</p>
+      <h1 class="mb-4">Organic.Edunet</h1>
+      <p class="texto-slide">O Organic.Edunet <a href="http://www.eanetwork.eu/organicedunet">portal.organic-edunet.eu</a> é uma federação de
+        repositórios financiada pela União Europeia e focada exclusivamente em conteúdos relacionados a Agricultura e Agroecologia Orgânica. 
+        Apesar de ser um repositório relativamente novo (lançado em 2009), ele já possui aproximadamente 2.500 usuários e
+        11.000 recursos. 
+      </p>
+      <p class="texto-slide">No Organic.Edunet, a qualidade é garantida pela comunidade de 
+        usuários, que possui permissão para pontuar os recursos e melhorar as traduções dos metadados (o portal é multilíngue, 
+        a interface é disponbilizada em <b>nove idiomas</b>).</p>
+      </p>
+      <p class="texto-slide">
+        Ainda, qualquer 
+        usuário pode dar sua opinião direta sobre um dado recurso do portal, 
+        assim como relatar conteúdos inapropriados.
+      </p>
 
-      <p class="texto-slide">Avaliar a qualidade de objetos de aprendizagem (OAs) é uma tarefa
-        difícil e complexa, que normalmente gira em torno de múltiplos e diferentes aspectos que precisam ser
-        observados. Na verdade, a própria definição de qualidade não é direta. Vargo et al. (2003) declaram que, ainda
-        que
-        a avaliação da qualidade de OAs possa ser considerada um campo que
-        ainda precisa ser explorado. A qualidade é contextual
-        e irá depender do “alinhamento entre o grupo de usuários sendo servidos
-        pelo objeto, a ambientação em que o objeto foi implementado, e o propósito
-        designado para o objeto”.</p>
 
+      <img src="images/organic.png" class="img-fluid" alt="Imagem responsiva">
     </div>
   </div>
 
