--- a/repositorios.html
+++ b/repositorios.html
@@ -38,10 +38,19 @@
           <a href="elera.html"><span class="fa fa-sticky-note mr-3"></span> eLera</a>
         </li>
         <li>
-          <a href="Connexions.html"><span class="fa fa-paper-plane mr-3"></span> Connexions</a>
+          <a href="revisaoespecialista.html"><span class="fa fa-paper-plane mr-3"></span> Revisão Especialista</a>
         </li>
         <li>
-          <a href="#"><span class="fa fa-paper-plane mr-3"></span> Information</a>
+          <a href="revisaousuarios.html"><span class="fa fa-paper-plane mr-3"></span> Revisão Usuarios</a>
+        </li>
+        <li>
+          <a href="graphite.html"><span class="fa fa-paper-plane mr-3"></span> Graphite</a>
+        </li>
+        <li>
+          <a href="consideracoes.html"><span class="fa fa-paper-plane mr-3"></span> Considerações</a>
+        </li>
+        <li>
+          <a href="sobre.html"><span class="fa fa-paper-plane mr-3"></span> Sobre</a>
         </li>
       </ul>
 
