--- a/revisaoespecialista.html
+++ b/revisaoespecialista.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>Objetos de Aprendizado</title>
+  <title>5.2 Avaliação dentro de Repositórios</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -58,22 +58,26 @@
 
     <!-- Page Content  -->
     <div id="content" class="p-4 p-md-5 pt-5">
-      <h1 class="mb-4">Introdução</h1>
-      <p class="texto-slide">O presente capítulo descreve alguns dos principais aspectos relacionados à avaliação da
-        qualidade de objetos de aprendizagem e como
-        os atuais repositórios realizam essa avaliação, além de apresentar alguns
-        exemplos de avaliação em repositórios tradicionais.</p>
+      <h1 class="mb-4">Revisão por Especialistas</h1>
+      <p class="texto-slide">
+        A revisão por especialistas (peer-review, ou revisão por pares) é o processo de avaliar um artigo ou ideia de
+        projeto pelo exame crítico de terceiros que são especialistas no mesmo domínio de trabalho. Esse sistema de
+        avaliação é largamente difundido no processo de publicação de artigos em revistas e conferências, onde o
+        trabalho a ser avaliado é submetido a um editor-chefe que solicita a um grupo de especialistas membros que
+        revisem o trabalho de maneira a obter conselhos sobre se o mesmo deve ou não ser aceito para publicação, e quais
+        seriam os trabalhos/alterações ainda necessários no caso de aprovação (HARNAD, 2000).
+      </p>
+      <p class="texto-slide">Geralmente, a identidade dos revisores é ocultada dos autores, assim como também dos demais
+        revisores. Os defensores da revisão por pares alegam que esse tipo de aprovação profissional serve como uma
+        forma de garantir a qualidade dos trabalhos publicados.
+      </p>
 
-      <p class="texto-slide">Avaliar a qualidade de objetos de aprendizagem (OAs) é uma tarefa
-        difícil e complexa, que normalmente gira em torno de múltiplos e diferentes aspectos que precisam ser
-        observados. Na verdade, a própria definição de qualidade não é direta. Vargo et al. (2003) declaram que, ainda
-        que
-        a avaliação da qualidade de OAs possa ser considerada um campo que
-        ainda precisa ser explorado. A qualidade é contextual
-        e irá depender do “alinhamento entre o grupo de usuários sendo servidos
-        pelo objeto, a ambientação em que o objeto foi implementado, e o propósito
-        designado para o objeto”.</p>
-
+      <p class="texto-slide">
+        Entretanto, o sistema não é livre de críticas e problemas, como por exemplo: conflitos de interesse,
+        parcialidades dos avaliadores, atraso desnecessário no processo, e incapacidade de detectar fraudes; todos
+        mencionados como possíveis fraquezas do processo (BENOS et al., 2007).
+      </p>
+      
     </div>
   </div>
 
