--- a/revisaousuarios.html
+++ b/revisaousuarios.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>Objetos de Aprendizado</title>
+  <title>5.2 Avaliação dentro de Repositórios</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -58,22 +58,23 @@
 
     <!-- Page Content  -->
     <div id="content" class="p-4 p-md-5 pt-5">
-      <h1 class="mb-4">Introdução</h1>
-      <p class="texto-slide">O presente capítulo descreve alguns dos principais aspectos relacionados à avaliação da
-        qualidade de objetos de aprendizagem e como
-        os atuais repositórios realizam essa avaliação, além de apresentar alguns
-        exemplos de avaliação em repositórios tradicionais.</p>
-
-      <p class="texto-slide">Avaliar a qualidade de objetos de aprendizagem (OAs) é uma tarefa
-        difícil e complexa, que normalmente gira em torno de múltiplos e diferentes aspectos que precisam ser
-        observados. Na verdade, a própria definição de qualidade não é direta. Vargo et al. (2003) declaram que, ainda
-        que
-        a avaliação da qualidade de OAs possa ser considerada um campo que
-        ainda precisa ser explorado. A qualidade é contextual
-        e irá depender do “alinhamento entre o grupo de usuários sendo servidos
-        pelo objeto, a ambientação em que o objeto foi implementado, e o propósito
-        designado para o objeto”.</p>
-
+      <h1 class="mb-4">Revisão por Usuários</h1>
+      <p class="texto-slide">
+        A revisão pelos usuários (public review, ou revisão
+        pelo público) é utilizada por empresas online (ex.: Amazon, eBay) e outras comunidades (ex.: IMDb,
+        YouTube, RYM, etc).
+        </p>
+        <p class="texto-slide">
+        Nesses casos, os usuários normalmente se beneficiam
+        mutuamente por meio de sistemas de recomendação com base na comparação dos perfis dos usuários e da
+        correlação com suas preferências pessoais, fornecem recomendações personalizadas de itens e produtos que
+        provavelmente serão de seu interesse.
+        </p>
+        <p class="texto-slide">        
+        Nesse tipo de sistema social, as motivações e os
+        objetivos por trás da participação dos usuários variam significantemente,
+        desde o desejo e a necessidade de interação social, até o benefício da autoexpressão e reputação profissional.
+        </p>   
     </div>
   </div>
 
