--- a/sobre.html
+++ b/sobre.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>Objetos de Aprendizado</title>
+  <title>5.2 Avaliação dentro de Repositórios</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -58,21 +58,14 @@
 
     <!-- Page Content  -->
     <div id="content" class="p-4 p-md-5 pt-5">
-      <h1 class="mb-4">Introdução</h1>
-      <p class="texto-slide">O presente capítulo descreve alguns dos principais aspectos relacionados à avaliação da
-        qualidade de objetos de aprendizagem e como
-        os atuais repositórios realizam essa avaliação, além de apresentar alguns
-        exemplos de avaliação em repositórios tradicionais.</p>
-
-      <p class="texto-slide">Avaliar a qualidade de objetos de aprendizagem (OAs) é uma tarefa
-        difícil e complexa, que normalmente gira em torno de múltiplos e diferentes aspectos que precisam ser
-        observados. Na verdade, a própria definição de qualidade não é direta. Vargo et al. (2003) declaram que, ainda
-        que
-        a avaliação da qualidade de OAs possa ser considerada um campo que
-        ainda precisa ser explorado. A qualidade é contextual
-        e irá depender do “alinhamento entre o grupo de usuários sendo servidos
-        pelo objeto, a ambientação em que o objeto foi implementado, e o propósito
-        designado para o objeto”.</p>
+      <h1 class="mb-4">Sobre</h1>
+      <p class="texto-slide">
+        Trabalho realizado pelos discentes Nayran Nery, Paulo Raimundo para discriplina informatica na Educação.</br>
+        Baseado no livro Objetos de Aprendizagem Volume 1 - Introdução e Fundamentos</br>
+        Autora: Juliana Braga</br>
+        Local e Ano: Santo André – SP, 2014</br>
+        Capitulo resumido: Cap 5 - Avaliação da Qualidade de Objetos de Aprendizagem dentro de Repositórios.
+      </p>
 
     </div>
   </div>
