--- a/Connexions.html
+++ b/Connexions.html
@@ -38,10 +38,19 @@
           <a href="elera.html"><span class="fa fa-sticky-note mr-3"></span> eLera</a>
         </li>
         <li>
-          <a href="Connexions.html"><span class="fa fa-paper-plane mr-3"></span> Connexions</a>
+          <a href="revisaoespecialista.html"><span class="fa fa-paper-plane mr-3"></span> Revisão Especialista</a>
         </li>
         <li>
-          <a href="#"><span class="fa fa-paper-plane mr-3"></span> Information</a>
+          <a href="revisaousuarios.html"><span class="fa fa-paper-plane mr-3"></span> Revisão Usuarios</a>
+        </li>
+        <li>
+          <a href="graphite.html"><span class="fa fa-paper-plane mr-3"></span> Graphite</a>
+        </li>
+        <li>
+          <a href="consideracoes.html"><span class="fa fa-paper-plane mr-3"></span> Considerações</a>
+        </li>
+        <li>
+          <a href="sobre.html"><span class="fa fa-paper-plane mr-3"></span> Sobre</a>
         </li>
       </ul>
 
@@ -63,7 +72,7 @@
       </p>
 
 
-      <p class="texto-slide">A qualidade no Connexios é controlada a partir de um sistema denominado de <b>(lenses)</b>
+      <p class="texto-slide">A qualidade no Connexions é controlada a partir de um sistema denominado de <b>(lenses)</b>
         que organiza os recursos de acordo com as avaliações fornecidas por indivíduos e organizações.
         Nesse contexto, recursos são explicitamente endossados por terceiros, e ganham maior garantia de qualidade à
         medida que começam a acumular mais endossos (lentes) de outros. Ainda, o Connexions também fornece mecanismos
