--- a/consideracoes.html
+++ b/consideracoes.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>Objetos de Aprendizado</title>
+  <title>Obkjetos de Aprendizagem - Avaliação dentro de Repositórios</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -58,22 +58,18 @@
 
     <!-- Page Content  -->
     <div id="content" class="p-4 p-md-5 pt-5">
-      <h1 class="mb-4">Introdução</h1>
-      <p class="texto-slide">O presente capítulo descreve alguns dos principais aspectos relacionados à avaliação da
-        qualidade de objetos de aprendizagem e como
-        os atuais repositórios realizam essa avaliação, além de apresentar alguns
-        exemplos de avaliação em repositórios tradicionais.</p>
-
-      <p class="texto-slide">Avaliar a qualidade de objetos de aprendizagem (OAs) é uma tarefa
-        difícil e complexa, que normalmente gira em torno de múltiplos e diferentes aspectos que precisam ser
-        observados. Na verdade, a própria definição de qualidade não é direta. Vargo et al. (2003) declaram que, ainda
-        que
-        a avaliação da qualidade de OAs possa ser considerada um campo que
-        ainda precisa ser explorado. A qualidade é contextual
-        e irá depender do “alinhamento entre o grupo de usuários sendo servidos
-        pelo objeto, a ambientação em que o objeto foi implementado, e o propósito
-        designado para o objeto”.</p>
-
+      <h1 class="mb-4">Considerações</h1>
+      <p class="texto-slide">
+        A avaliação da qualidade dos objetos de aprendizagem é uma tarefa
+        difícil que normalmente envolve diversos aspectos e diferentes atores
+        interessados, e os métodos de avaliação atualmente existentes não estão
+        livres de ambiguidades. </p>
+        <p class="texto-slide">
+        Diferentes repositórios de objetos de aprendizagem estão frequentemente adotando
+        estratégias que confiam na comunidade de usuários e especialistas que avaliam a qualidade dos recursos
+        a partir de pontos e comentários. Tais avaliações podem ser realizadas
+        a partir de critérios de avaliação formais e pré-definidos, ou de maneira mais informal e sem especificações pré-estabelecidas.
+      </p>
     </div>
   </div>
 
