--- a/elera.html
+++ b/elera.html
@@ -38,10 +38,19 @@
           <a href="elera.html"><span class="fa fa-sticky-note mr-3"></span> eLera</a>
         </li>
         <li>
-          <a href="Connexions.html"><span class="fa fa-paper-plane mr-3"></span> Connexions</a>
+          <a href="revisaoespecialista.html"><span class="fa fa-paper-plane mr-3"></span> Revisão Especialista</a>
         </li>
         <li>
-          <a href="#"><span class="fa fa-paper-plane mr-3"></span> Information</a>
+          <a href="revisaousuarios.html"><span class="fa fa-paper-plane mr-3"></span> Revisão Usuarios</a>
+        </li>
+        <li>
+          <a href="graphite.html"><span class="fa fa-paper-plane mr-3"></span> Graphite</a>
+        </li>
+        <li>
+          <a href="consideracoes.html"><span class="fa fa-paper-plane mr-3"></span> Considerações</a>
+        </li>
+        <li>
+          <a href="sobre.html"><span class="fa fa-paper-plane mr-3"></span> Sobre</a>
         </li>
       </ul>
 
@@ -50,7 +59,7 @@
     <!-- Page Content  -->
     <div id="content" class="p-4 p-md-5 pt-5">
       <h1 class="mb-4">eLera</h1>
-      <p class="texto-slide">eLERA – Significa Rede de Pesquisa e Avaliação de Ensino Eletrô nico (E-Learning Research
+      <p class="texto-slide">eLERA – Significa Rede de Pesquisa e Avaliação de Ensino Eletrônico (E-Learning Research
         and Assessment Network). Foi um pequeno referatório (com aproximadamente trezentos recursos) criado com
         propósito de pesquisa. O foco principal desse repositório era de fornecer mecanismos e ferramentas para a
         avaliação colaborativa e participativa de objetos de aprendizagem a partir do uso do LORI.
